fix(docs): [云引擎] 网站托管：更新域名备案相关信息 (#1194)

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -298,7 +298,7 @@ console.log('getHours', time.hours());
 
 #### 第一步
 
-请提交以下资料，我们来帮你录入到系统：
+请提交以下资料，我们来帮你录入到系统（**图片请小于 100 KB，清晰可见**）：
 
 1. 单位名称、单位注册地址、单位通信地址、营业执照号码、营业执照副本扫描件；
 2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ 号码；
@@ -379,18 +379,45 @@ WAP<br/>
 1. 企业营业执照副本复印件，盖公章；
 2. 企业法人身份证复印件（正反面复印在一张纸上），盖公章；
 3. 网站负责人身份证复印件（正反面复印在一张纸上），盖公章（如果和企业法人是同一人的话，此条可忽略）；
-4. 网站备案信息真实性核验单（[下载填写样例](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)）
-5. 网络安全责任书（[下载填写样例](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)）
-6. 法人授权书复印件（[下载填写样例](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)）
+4. 域名证书复印件；
+5. 网站备案信息真实性核验单（[下载填写样例](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)）
+6. 网络安全责任书（[下载填写样例](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)）
+7. 法人授权书复印件（[下载填写样例](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)）
 
 <a id="isp_inspection_office" name="isp_inspection_office"></a>**备案拍照核验点地址：**
 
-城市|地址|预约电话
----|---|---
-北京|北京市海淀区海淀北二街中关村 SOHO B 区—510 室|15901173539
-上海|上海市杨浦区隆昌路 619 号城市概念创意园区 8 号楼北区 A01 室|021-65012912
-深圳|深圳市南山区科技中二路威盛科技大厦 602 室|13794465215
-青岛|青岛市崂山区松岭路 169 号蓝色硅谷软件中心 202 室|0532-67788606-8810<br/> 0532-83842530-8810
+<table>
+  <tr>
+    <th>城市</th>
+    <th>地址</th>
+    <th>统一预约电话</th>
+  </tr>
+  <tr>
+    <td>北京</td>
+    <td>北京市海淀区海淀北二街中关村 SOHO B 区 510 室</td>
+    <td rowspan="6">4000188113</td>
+  </tr>
+  <tr>
+    <td>上海</td>
+    <td>上海市杨浦区隆昌路 619 号城市概念创意园区 10 号楼 B 楼 7 层</td>
+  </tr>
+  <tr>
+    <td>深圳</td>
+    <td>深圳市南山区科技中二路威盛科技大厦 602 室</td>
+  </tr>
+  <tr>
+    <td>青岛</td>
+    <td>青岛市崂山区松岭路 169 号蓝色硅谷软件中心 202 室</td>
+  </tr>
+  <tr>
+    <td>广州</td>
+    <td>广州市天河区科韵路 12-1 号方圆 E 时光东座 705 室</td>
+  </tr>
+  <tr>
+    <td>成都</td>
+    <td>成都高新区天府大道香年广场 T3-2605</td>
+  </tr>
+</table>
 
 <a id="isp_mailing" name="isp_mailing"></a>**备案资料邮寄地址：**
 
@@ -403,7 +430,7 @@ WAP<br/>
   </div>
   <div class="col-sm-6">
 <p><strong>上海</strong></p>
-上海市杨浦区隆昌路 619 号城市概念 8 号楼北区 A01<br/>
+上海市杨浦区隆昌路 619 号城市概念 10 号楼 B 楼 7 层<br/>
 备案组<br/>
 021-55509888<br/>
 </div>
