--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -136,6 +136,10 @@
             <!-- <li><a href="js_faq.html">FAQ</a></li> -->
             <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript 数据存储 SDK API</a></li>
             <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">JavaScript 实时通信 SDK API</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">云引擎</li>
+            <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
+            <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -157,6 +161,9 @@
             <li><a href="python_guide.html">数据存储开发指南</a></li>
             <!-- <li><a href="python_faq.html">FAQ</a></li> -->
             <li><a href="/api-docs/python/leancloud.html" target="_blank">Python SDK API</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">云引擎</li>
+            <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -184,9 +191,13 @@
           <ul class="dropdown-menu">
           <li><a href="leanengine_overview.html">云引擎总览</a></li>
           <li><a href="leanengine_plan.html">云引擎运行方案</a></li>
-         <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
+          <li role="separator" class="divider"></li>
+          <li class="dropdown-header">Node.js</li>
+          <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
           <li><a href="leanengine_cloudfunction_guide-node.html">云函数开发指南</a></li>
-          <li><a href="leanengine_guide-python.html">云引擎 Python 开发指南</a></li>
+          <li class="dropdown-header">Python</li>
+          <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
+          <li role="separator" class="divider"></li>
           <li><a href="leanengine_examples.html">云引擎项目示例</a></li>
           <li><a href="leanengine_cli.html">云引擎命令行工具</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
