chore(style): change dropdown-header's padding

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -17,6 +17,11 @@ body {
 }
 
 .doc-content {
+  .dropdown-header {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 3px 15px;
+  }
 
   p,
   li {
