chore(style): fix dropdown-header's nesting level

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -10,7 +10,7 @@
   color: #3090e4!important;
   border: none!important;
 }
-.dropdown-header() {
+.dropdown_header() {
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -20,14 +20,15 @@ body {
   font-size: 15px;
 }
 
-.doc-content {
-  .dropdown-header {
-    .dropdown-header
+.nav .dropdown-header {
+    .dropdown_header;
     padding: 3px 15px;
-  }
+}
+
+.doc-content {
   
   .link-block .dropdown-header {
-    .dropdown-header
+    .dropdown_header;
     font-size: 12px;
     padding: 0;
   }
