chore(nav): [存储] JS 上线新版文档，老文档放入 archive 目录 (#1218)

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -127,7 +127,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">JavaScript</a>
           <ul class="dropdown-menu">
-            <li><a href="js_guide.html">数据存储开发指南</a></li>
+            <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
             <li><a href="js_push.html">消息推送开发指南</a></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
             <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
