--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -122,7 +122,7 @@
       <div class="link-block">
         <h2>JavaScript SDK</h2>
         <ul>
-          <li><a href="js_guide.html">数据存储开发指南</a></li>
+          <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
           <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
           <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
