feat(style): add border style for image

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -32,6 +32,11 @@ body {
     font-size: 12px;
     padding: 0;
   }
+  
+  .img-bordered {
+    /* use outline in place of border */
+    outline: 1px solid #999;
+  }
 
   p,
   li {
