--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -115,7 +115,10 @@
           <ul class="dropdown-menu">
             <li><a href="leanstorage_guide-android.html">数据存储开发指南</a></li>
             <li><a href="android_push_guide.html">消息推送开发指南</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
+            <li><a href="chatkit-android.html">ChatKit 使用指南</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="relation_guide-android.html">关系建模指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
@@ -134,8 +137,8 @@
             <li><a href="sms_guide-js.html">短信服务使用指南</a></li>
             <li><a href="js_analytics.html">统计分析开发指南</a></li>
             <!-- <li><a href="js_faq.html">FAQ</a></li> -->
-            <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript 数据存储 SDK API</a></li>
-            <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">JavaScript 实时通信 SDK API</a></li>
+            <li><a href="/api-docs/javascript/index.html" target="_blank">数据存储 SDK API</a></li>
+            <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">实时通信 SDK API</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">云引擎</li>
             <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
@@ -214,7 +217,7 @@
             <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
             <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
-            <li><a href="sns.html">SNS 组件开发指南</a></li>
+            <li><a href="sns.html">第三方平台账号登录 SNS 开发指南</a></li>
             <li><a href="feedback.html">用户反馈开发指南</a></li>
             <li class="divider"></li>
             <li><a href="sdk_down.html">SDK 下载</a></li>
