--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -48,7 +48,9 @@
 ### 多用户权限设置
 
 假如需求增加为：帖子的作者允许某个特定的用户可以修改帖子，除此之外的其他人不可修改。
-实现步骤就是额外指定一个用户，为他设置帖子的「写」权限
+实现步骤就是额外指定一个用户，为他设置帖子的「写」权限：
+
+<div class="callout callout-info">注意：**开启 `_User` 表的查询权限才可以执行以下代码**</div>
 
 {% block create_post_set_acl_for_othter_user%}
 
