chore(nav): 增加新版 Python 存储、建模、权限文档

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -84,6 +84,7 @@
       <div class="link-block">
         <h2>iOS / OS X SDK</h2>
         <ul>
+          <li><a href="sdk_setup-ios.html">SDK 安装指南</a></li>
           <li><a href="leanstorage_guide-ios.html">数据存储开发指南</a></li>
           <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
@@ -94,7 +95,7 @@
           <li><a href="sms_guide-ios.html">短信服务使用指南</a></li>
           <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
           <li><a href="ios_os_x_faq.html">FAQ</a></li>
-          <li><a href="/api-docs/iOS/index.html" target="_blank">iOS SDK API</a></li>
+          <li><a href="/api-docs/iOS/index.html" target="_blank">SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -104,6 +105,7 @@
       <div class="link-block">
         <h2>Android SDK</h2>
         <ul>
+          <li><a href="sdk_setup-android.html">SDK 安装指南</a></li>
           <li><a href="leanstorage_guide-android.html">数据存储开发指南</a></li>
           <li><a href="android_push_guide.html">消息推送开发指南</a></li>
           <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
@@ -113,7 +115,7 @@
           <li><a href="android_statistics.html">统计分析开发指南</a></li>
           <li><a href="sms_guide-android.html">短信服务使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
-          <li><a href="/api-docs/android/index.html" target="_blank">Android SDK API</a></li>
+          <li><a href="/api-docs/android/index.html" target="_blank">SDK API</a></li>
         </ul>
       </div>
     </div>
@@ -123,6 +125,7 @@
       <div class="link-block">
         <h2>JavaScript SDK</h2>
         <ul>
+          <li><a href="sdk_setup-js.html">SDK 安装指南</a></li>
           <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
           <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
@@ -165,9 +168,11 @@
       <div class="link-block">
         <h2>Python SDK</h2>
         <ul>
-          <li><a href="python_guide.html">数据存储开发指南</a></li>
-          <li><a href="python_faq.html">FAQ</a></li>
-          <li><a href="/api-docs/python/leancloud.html">Python SDK API</a></li>
+          <li><a href="sdk_setup-python.html">SDK 安装指南</a></li>
+          <li><a href="leanstorage_guide-python.html">数据存储开发指南</a></li>
+          <li><a href="relation_guide-python.html">关系建模指南</a></li>
+          <li><a href="acl_guide-python.html">权限管理使用指南</a></li>
+          <li><a href="/api-docs/python/leancloud.html">SDK API</a></li>
           <li role="separator" class="divider"></li>
           <li class="dropdown-header">云引擎</li>
           <li><a href="leanengine_guide-python.html">云引擎开发指南</a></li>
