--- a/views/acl_quick_start.tmpl
+++ b/views/acl_quick_start.tmpl
@@ -1,7 +1,7 @@
 {% set appid = '{{appid}}' %}
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
-# {% block language_version %}{% endblock %} - 权限管理快速指南
+# {% block language_version %}{% endblock %} 权限管理快速指南
 
 **一个应用的权限管理是否健全，是判断其能否正式发布的核心标准**，任何一家应用开发厂商都不会希望自己的应用在发布之后依然存在安全漏洞。
 
