更新最新的营销类短信限制。

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -187,6 +187,8 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 营销类短信默认会在短信最后加上「**回复 TD 退订**」，这是运营商的强制要求。
 
+<div class="callout callout-info">注意：**自 2016 年 6 月起，个人用户无法发送营销类短信。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将无法发送营销类短信，伪造或者提供虚假名称将追究法律责任。**</div>
+
 ## 模板规范
 
 鉴于开发者的应用场景各异，我们整理了以下范例来说明如何撰写规范的短信模板。需要再次强调，一切跟营销推广相关的短信模板，请在创建模板时务必选择**营销类**，否则将无法通过审核。
