fix(docs): [短信] 修订字词和样式

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -187,7 +187,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 营销类短信默认会在短信最后加上「**回复 TD 退订**」，这是运营商的强制要求。
 
-<div class="callout callout-info">注意：**自 2016 年 6 月起，个人用户无法发送营销类短信。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将无法发送营销类短信，伪造或者提供虚假名称将追究法律责任。**</div>
+<div class="callout callout-danger">自 2016 年 6 月起，营销类短信不允许由个人用户发送。所有营销类短信必须提供有效的公司或者企业名称，缺失名称将导致营销类短信无法发送。伪造或使用虚假名称将会被追究法律责任。</div>
 
 ## 模板规范
 
