fix(docs): [云引擎] 去掉域名绑定时的 A 记录 (#1248)
A 记录是固定 IP 指向，后续如果我们云引擎入口 IP 变了，用户又需要重新设置指向，所以干脆去掉。

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -280,7 +280,7 @@ console.log('getHours', time.hours());
 
 我们会在 3 个工作日内完成审核，如果审核通过将为你绑定域名。请在绑定操作完成后配置 DNS：
 
-- 将要绑定域名的 CNAME 或者 A 记录指向 leanapp.cn（国内）或 avosapps.us（美国）
+- 将要绑定域名的 CNAME 指向 leanapp.cn（国内）或 avosapps.us（美国）
 
 ### 域名备案流程
 
