「JS 文档」将 Web 安全放到文档中。

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -5,6 +5,8 @@
 
 #  {{platform_title}} 数据存储开发指南
 
+## 简介
+
 数据存储（{{productName}}）是 LeanCloud 提供的核心功能之一，它的使用方法与传统的关系型数据库有诸多不同。下面我们将其与传统数据库的使用方法进行对比，让大家有一个初步了解。
 
 下面这条 SQL 语句在绝大数的关系型数据库都可以执行，其结果是在 Todo 表里增加一条新数据：
@@ -49,7 +51,7 @@
 
 请阅读 [{{platform_title}} 安装指南](sdk_setup-{{segment_code}}.html)。
 
-{% block text_for_ts_developer %}{% endblock %}
+{% block text_web_security %}{% endblock %}
 
 ## 对象
 
